--- a/index.html
+++ b/index.html
@@ -5,7 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Roboto');
+
+        * {
+            font-family: 'Roboto', sans-serif;
+            padding: 0;
+            margin: 0;
+            color: #fff;
+        }
+
+        body {
+            background-color: #1f1b23;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+            margin: 25px 0;
+        }
+
+        .avatar {
+            border-radius: 150px;
+            height: 150px;
+            width: 150px;
+            background-size: cover;
+            background-position: center;
+            background-color: #444255;
+            background-image: url('https://imgur.com/811CRNC.png');
+            border: #444255 solid 5px;
+        }
+
+        h1 {
+            margin-top: 25px;
+        }
+
+        h1 i {
+            font-size: 20px;
+            color: #555;
+        }
+
+        footer {
+            position: absolute;
+            bottom: 25px;
+        }
+    </style>
 </head>
 <body>
     <div class="avatar"></div>
